[-] Bug fixed.
[+] Feature added.
[*] Change.

2007-??-?? v0.95
================
Annotation configuration:
 - JPAAnnotationsConfigurer does not configure a NotNullCheck for fields with @Column(nullable=false)
   that also have @javax.persistence.GeneratedValue or @javax.persistence.Version specified (thanks to Jim Greene)

Built-in constraints:
 + added @net.sf.oval.constraint.NotBlank (thanks to Dennis Kieselhorst)

Expression languages:
 + added support for OGNL as expression language
 + added support for MVEL as expression language

XML configuration:
 - fixed some issues with the XML configuration DTD (e.g. [ Bug 1728672 ])

Other changes:
 + localization support for several exception types added
 + added static Validator.getCollectionFactory method
 + added static Validator.setCollectionFactory method
 * made Validator.setMessageResolver method static
 * made Validator.getMessageResolver method static
 * moved net.sf.oval.collection.CollectionFactoryHolder to net.sf.oval.internal
 - fixed a StackOverflowError that occured during invariant checking for 
   guarded classes that override the hashCode() method (thanks to io_exception)


2007-03-18 v0.9
===============
Built-in constraints:
  * renamed package net.sf.oval.constraints to net.sf.oval.constraint
  * net.sf.oval.constraint.NoSelfReference: renamed @NotSelfRef to @NoSelfReference
  * net.sf.oval.constraint.MatchPattern: renamed @RegEx to @MatchPattern
  + added @net.sf.oval.constraint.Assert for use with expression languages
  + added @net.sf.oval.constraint.CheckWith (as an alternative to @ValidateWithMethod)
  + added @net.sf.oval.constraint.Future
  + added @net.sf.oval.constraint.HasSubstring
  + added @net.sf.oval.constraint.Max
  + added @net.sf.oval.constraint.MaxLength
  + added @net.sf.oval.constraint.MaxSize
  + added @net.sf.oval.constraint.Min
  + added @net.sf.oval.constraint.MinLength
  + added @net.sf.oval.constraint.MinSize
  + added @net.sf.oval.constraint.Past