@@ -25,7 +25,7 @@ import net.sf.oval.guard.Guarded;
  */
 public class CustomConstraintMessageTest extends TestCase
 {
-	@Guarded(applyFieldConstraintsToSetter = true)
+	@Guarded(applyFieldConstraintsToSetters = true)
 	private class TestEntity
 	{
 		@Range(min = 2, max = 4, message = "An amount of {invalidValue} in not in the allowed range ({min}-{max})")
